--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
               </li>
             </ul>      
                 <a class="nav-link" aria-current="page" href="#"><img src="https://w7.pngwing.com/pngs/856/292/png-transparent-computer-icons-logo-instagram-logo-miscellaneous-logo-desktop-wallpaper.png" alt="" height="20px"></a>
-                <a class="nav-link" aria-current="page" href="#"><img src="C:\Users\tugru\OneDrive\Masaüstü\Web ödev\Site\pngler\png-transparent-computer-icons-facebook-facebook-logo-black-and-white-symbol.png" alt="" height="20px"></a>
-                <a class="nav-link" aria-current="page" href="#"><img src="C:\Users\tugru\OneDrive\Masaüstü\Web ödev\Site\pngler\png-clipart-computer-icons-twitter-black-logo-computer-wallpaper.png" alt="" height="20px"></a>
+                <a class="nav-link" aria-current="page" href="#"><img src="https://e7.pngegg.com/pngimages/23/317/png-clipart-social-media-computer-icons-facebook-blog-social-media-logo-social-media-thumbnail.png" alt="" height="20px"></a>
+                <a class="nav-link" aria-current="page" href="#"><img src="https://e7.pngegg.com/pngimages/965/519/png-clipart-computer-icons-twitter-black-logo-computer-wallpaper.png" alt="" height="20px"></a>
           </div>
         </div>
       </nav>
