--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="row" style="text-align-last: center;">
                 <div class="col-md" style="height: 120px;">
                     <div class="card" style="width: 22rem;">
-                        <img src="C:\Users\tugru\OneDrive\Masaüstü\Web ödev\Site\SliderPhoto\bmw.jpg" class="card-img-top" alt="..." height="175px">
+                        <img src="https://img4.goodfon.com/original/1920x1080/4/48/bmw-m4-white-road-grass.jpg" class="card-img-top" alt="..." height="175px">
                         <div class="card-body">
                           <p class="card-text">Galeriye göz at</p>
                           <a href="galeri.html" class="btn btn-primary">Git</a>
