--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="http://hdresim.net/resimler/r4/bmw_m4_coupe_2015(5).jpg" class="d-block w-100" alt="...">
+            <img src="https://images.wallpapersden.com/image/download/bmw-m3-f80_Zm1uZ22UmZqaraWkpJRmbmdlrWZlbWU.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               
             </div>
